moved flex from <main> to <body> & changed height to min-height in <body> to fix content getting cuts off on small screen

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -21,7 +21,10 @@
 }
 
 body { /* Left & right spacing is left & right from default body margin + 12px */
-	height: 91vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 91vh;
 	margin-top: 4.5vh;
 	margin-bottom: 4.5vh;
 	padding: var(--unit-two);
@@ -29,16 +32,9 @@ body { /* Left & right spacing is left & right from default body margin + 12px *
 }
 
 main {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	text-align: center;
-}
-
-#rock-paper-scissors {
 	width: 100%;
 	max-width: 25rem;
+	text-align: center;
 }
 
 .__game {
